# DataStructure

./: .gitignore  README.md  Reading.txt  a
Array/DynamicArray/: Array_Main.c  array.c  array.h  makefile
Array/Vector/: Vector_Main.c  cmakelists.txt  makefile  vector.c  vector.h
Array/absatrct/: Abstract_Main.c  abstract.c  abstract.h  makefile
Array/polymorphism/: inheritance_polymorphism.c
Graph/AdjListGraph/: Adj_List_Main.c  a.c  adjlist.c  adjlist.h  makefile
Graph/AdjMatrixGraph/: Adj_Matrix_Main.c  adjmatrix.c  adjmatrix.h  makefile
HashTable/: readme
HashTable/Dict/: dict.c  dict.h  dict_main.c  makefile
HashTable/example/: readme.md
Heap/: Heap_Main.c  makefile
Heap/PriorityQueue/: Heap_Main.c  makefile  min_heap.c  min_heap.h
LinkedList/DoubleCircularLinkedList/: Double_Circular_Main.c  double_circular_linked_list.c  double_circular_linked_list.h  makefile
LinkedList/DoubleLinkedList/: Double_Main.c  double_linked_list.c  double_linked_list.h  makefile
LinkedList/SingleCircularLinkedList/: Single_Circular_Main.c  makefile  single_circular_linked_list.c  single_circular_linked_list.h
LinkedList/SingleLinkedList/: Single_Main.c  makefile  single_linked_list.h
LispList/: list.c
LispList/GenList/: gen_list.c  gen_list.h  gen_list_main.c  makefile
Matrix/SparseMatrix/: README.md  git_log.txt  makefile  matrix.txt  sparse_main.c  sparse_matrix.c  sparse_matrix.h
Queue/DoubleCircularQueue/: Double_Circular_Main.c  double_circular_queue.c  (+2 more)
String/: Hyperlink.txt  README.MD  toStr
config/: CMakeLists.txt  c  config.c  config.h
(+145 files in other folders)
